manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-docs-web-service
spec:
  type: LoadBalancer
  selector:
    app: y-docs-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
