manifests/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - "soldesk-group4-pbs-project.click"
  http:
  - match:
    - uri:
        prefix: /  # <--- /argocd 대신 / 로 변경하여 도메인 접속 시 바로 뜨게 함
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
